fix(CustomFieldInputMultipleChoice): add back some spacing around icons
I am not sure what happened here... it looked good yesterday? I need design to revise the spacing around and inbetween icons.

--- a/src/components/custom-field-input-multiple-choice/custom-field-input-multiple-choice.css
+++ b/src/components/custom-field-input-multiple-choice/custom-field-input-multiple-choice.css
@@ -30,10 +30,6 @@
   margin-right: 4px;
 }
 
-.icons-container > .icon-container:last-child {
-  margin-right: 0;
-}
-
 .clear-icon {
   cursor: pointer;
   padding: 2px;
